# rust-serverbase

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml
.devcontainer/: Dockerfile.overrride  compose.override.yaml  devcontainer.json
cmd/: Cargo.toml
cmd/src/: main.rs
config/: Cargo.toml
config/src/: config.rs
controller/: Cargo.toml
controller/src/handler/api/: health.rs
controller/src/module/: mod.rs
domain/: Cargo.toml
domain/src/entity/: mod.rs
infra/: Cargo.toml
infra/src/: db_conn.rs
server-config/: Cargo.toml
server-config/src/: config.rs
server-controller/: Cargo.toml
server-controller/src/: main.rs
server-controller/src/module/: mod.rs
server-controller/src/router/: api.rs
server-domain/: Cargo.toml
server-infra/: Cargo.toml
server-infra/src/: lib.rs  redis_conn.rs
server-usecase/: Cargo.toml
usecase/: Cargo.toml
