[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
controller = { path = "../controller" }
domain = { path = "../domain" }
infra = { path = "../infra" }
usecase = { path = "../usecase" }
axum = "0.7.9"
shaku = "0.6.2"
shaku_derive = "0.6.1"
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
sea-orm = { version = "0.11.3", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }