[package]
name = "server-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
server-config = { path = "../server-config" }
server-domain = { path = "../server-domain" }
server-infra = { path = "../server-infra" }
server-usecase = { path = "../server-usecase" }
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
serde_json = "1.0.108"